<resources>
    <string name="app_name">Constraint Layout</string>
    <string name="synopsis_label">Sinopsis</string>
    <string name="synopsis">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle,
        a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy,
        his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality.
        Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</string>
    <string name="duration_label">Durasi</string>
    <string name="duration">2h 4 m</string>
    <string name="release_date_label">Tanggal Rilis</string>
    <string name="release_date">8 Maret 2019</string>
    <string name="cast_label">Pemeran Utama</string>
    <string name="cast_name">Robert Downey Jr.</string>
    <string name="act_as">Tony Stark / Iron Man</string>
    <string name="movie_title">Avenger: Infinity War XXXXXXXXXXXXXXXX</string>

</resources>
